CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(buffer_pool)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE(ExternalProject)
SET_PROPERTY(DIRECTORY PROPERTY EP_STEP_TARGETS configure build test)
SET(GSL_DOWNLOAD_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/GSL)
ExternalProject_Add(
    gsl
    GIT_REPOSITORY https://github.com/martinmoene/gsl-lite.git
    UPDATE_DISCONNECTED TRUE
    PREFIX ${GSL_DOWNLOAD_LOCATION}
    CONFIGURE_COMMAND ""
    BUILD_COMMAND ""
    INSTALL_COMMAND ""
)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${GSL_DOWNLOAD_LOCATION}/src/gsl/include
)

ADD_SUBDIRECTORY(tests)

SET(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "Switch off GTest for Benchmarks" FORCE)
ADD_SUBDIRECTORY(bench)

ADD_EXECUTABLE(foo main.cpp)
ADD_DEPENDENCIES(foo gsl)
